@@ -2,6 +2,7 @@
 	* Fixed bug #10278: Usage of choices is limited to 100  (Thanks to Bernd Schuhmacher)
 	* Fixed bug #11388: MSIE 8.0 Elementbrowser layout broken (Thanks to Georg Kuehnberger)
 	* Fixed bug #11387: MSIE 8.0 module file upload tab problem (Thanks to Georg Kuehnberger)
+	* Fixed bug #6110: Description Field in cat_edit (Thanks to Tobi)
 
 2009-08-20  Michiel Roos <michiel@netcreators.com>
 
